src/app/layout/info/info.component.scss
/* ... */
.imgprincipal-1 {
  max-width: 100%;
  height: auto;
}

.somos-tu-mejor-aliado-span,
.somos-tu-mejor-aliado-span2 {
  color: #ffffff;
}

.somos-tu-mejor-aliado-span {
  font: 400 36px/1.2 "Axiforma", sans-serif;
}

.somos-tu-mejor-aliado-span2 {
  font: 700 40px/1.2 "Axiforma", sans-serif;
}

.compra-vende-publica-y-genera-ingresos-de-forma-r-pida-y-segura {
  font: 400 18px "Poppins", sans-serif;
  max-width: 100%;
  margin-bottom: 20px;
  color: #ffffff;
}

.frame-33 {
  background: #1e1e1e;
  padding: 10px;
  display: table;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 10px;
  text-align: center;
}

.registrate-gratis {
  font: 400 24px "Roboto", sans-serif;
  color: #ffffff;
}

/* Media queries para dispositivos móviles */
@media (max-width: 768px) {
  .frame-42 {
      flex-direction: column;
      align-items: center;
      gap: 10px;
  }

  .frame-41 {
      padding: 0;
      text-align: center;
  }

  .somos-tu-mejor-aliado-span {
      font-size: 28px;
  }

  .somos-tu-mejor-aliado-span2 {
      font-size: 32px;
  }

  .compra-vende-publica-y-genera-ingresos-de-forma-r-pida-y-segura {
      font-size: 16px;
  }

  .frame-33 {
      flex-direction: column;
  }

  .registrate-gratis {
      font-size: 20px;
  }
}






/* Estilos para la lista desplegable */
.iphone-menu a {
text-decoration: none;
color: #000; /* Cambia el color del texto a negro */
font-size: 18px;
padding: 10px 20px;
border: none; /* Elimina el borde */
border-radius: 30px;
/*box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); /* Agrega una sombra al botón */
transition: background-color 0.3s, color 0.3s, transform 0.3s; /* Agrega una transición para la sombra */
}

ul{
padding: 2px;
margin: auto;
}

.iphone-menu a:hover {
background-color: #02a0e3; /* Cambia el color de fondo al pasar el mouse */
color: #fff; /* Cambia el color del texto al pasar el mouse */
box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Aumenta la sombra al pasar el mouse */
}

/* Estilos para hacerlo responsive */
@media screen and (max-width: 768px) {
.iphone-menu ul {
    text-align: center; /* Centra los elementos de la lista horizontalmente */

}

.iphone-menu li {
    display: inline-block; /* Cambia a elementos de lista en línea */
    margin: 0 10px;
}

.iphone-menu a {
    font-size: 14px; /* Reduce el tamaño de fuente en dispositivos móviles */
    padding: 8px 16px; /* Reduce el espaciado interior del botón */
    display: block; /* Hace que los botones ocupen el ancho completo */
    margin: 10px auto; /* Centra verticalmente los botones */
}
}








/* Estilos generales para las cajas de características */
.feature-box {
text-align: center;
flex-basis: calc(15% - 20px); /* Ancho de 25% con margen de 20px entre cajas en pantallas grandes */
padding: 0px;
background-color: #fff;
border: 1px solid #ddd;
border-radius: 5px;
margin: 0%, 6%, 0, 6% ;
box-sizing: border-box;
}

.caja-esp {
  text-align: center;
  flex-basis: calc(25% - 20px); /* Ancho de 25% con margen de 20px entre cajas en pantallas grandes */
  padding: 20px;
  background-color: #ffffff00;
  border: 1px solid #ffffff00;
  border-radius: 5px;
  margin: 10px;
  box-sizing: border-box;
}

/* Estilos para la sección de características en pantallas grandes */
.feature-section {
display: flex;
flex-wrap: wrap; /* Permite que las cajas se envuelvan en múltiples líneas */
justify-content: space-between;
padding: 2%;
background-color: #f2f2f2;
}

/* Estilos para los iconos */
.icon {
font-size: 36px;
margin-bottom: 10px;
}

/* Estilos para los títulos y descripciones */
.text {
font-size: 16px;
}

/* Media query para pantallas pequeñas (por ejemplo, dispositivos móviles) */
@media screen and (max-width: 768px) {
.feature-box {
    flex-basis: calc(50% - 20px); /* Ancho de 50% con margen de 20px entre cajas en pantallas pequeñas */
}

.feature-section {
  padding: 12%;
}


}


/* Media query para pantallas pequeñas (por ejemplo, dispositivos móviles) */
@media screen and (max-width: 480px) {
  .feature-box {
      flex-basis: calc(50% - 20px); /* Ancho de 50% con margen de 20px entre cajas en pantallas pequeñas */
  }

  .feature-section {
    padding: 6%;
  }


}


.seccion-dos-cajas {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
  margin: 20px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.caja {
  flex: 0 0 calc(50% - 20px);
  background-color: #ffffff;
  padding: 20px;
  margin-bottom: 20px;


}

.contenido-caja {
  text-align: center;
}

.imagen img {
  max-width: 100%;
  height: auto;
}

ul{
  width: 60%;
}

/*h1 {
  font-size: 24px;
  margin: 10px 0;
}*/

/*h2 {
  font-size: 18px;
  margin: 10px 0;
}*/

p {
  font-size: 16px;
}

.custom-button {
  width: 100%; /* El botón ocupa todo el ancho del contenedor */
  height: 100%; /* El botón ocupa todo el alto del contenedor */
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Media Query para dispositivos móviles */
@media screen and (max-width: 768px) {
  .seccion-dos-cajas {
    flex-direction: column;
    margin: 10px 0;
    padding: 12px;
    box-sizing: border-box;
    width: 100%;
  }

  ul{
      width: 100%;
      box-sizing: border-box;
    }

  .caja {
    flex: 0 0 100%;
    width: 100%;
    box-sizing: border-box;
    padding: 12px;
  }

  .contenido-caja {
      text-align: center;
    }
}









.servicios {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
  padding: 20px;
  background-color: #f5f5f5; /* Color de fondo */
}

.servicio {
  flex: 1;
  max-width: 300px;
  padding: 20px;
  background-color: #ffffff; /* Color de fondo de cada servicio */
  border-radius: 10px; /* Bordes redondeados */
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra suave */
}

.servicio img {
  max-width: 60px; /* Tamaño máximo de la imagen del servicio */
  height: auto;
  margin-bottom: 10px; /* Espacio entre la imagen y el título */
}
/* ... */

